--- a/Portfolio/WebContent/bootstrap/css/style.css
+++ b/Portfolio/WebContent/bootstrap/css/style.css
@@ -2,6 +2,17 @@ body {
 	font-family: 'Lato', sans-serif;
 	color: #747704;
 	font-weight: 300;
+/* 	min-width:320px; */
+/* 	max-width:900px;
+ */}
+
+hr{
+	display: block;
+	height: 1px;
+	border:0;
+	border-top:3px solid #ccc;
+	margin:10px 0;
+	padding:0;
 }
 
 .text-muted{
