--- a/ModernWeb-HTML/ch09/StyleSheet.css
+++ b/ModernWeb-HTML/ch09/StyleSheet.css
@@ -13,6 +13,7 @@
     height: 50px;
     background-color: orange;
     margin: 5px;
+    transition: 
     transition-property: background-color, width;
     transition-duration: 1s, 5s;
 }
