--- a/ModernWeb-HTML/ch10/TransformStyleSheet.css
+++ b/ModernWeb-HTML/ch10/TransformStyleSheet.css
@@ -1,6 +1,7 @@
 ﻿body {
     width: 200px;
     margin: 200px auto;
+    perspective: 2000px;
     /*border: 5px solid black;*/
 }
 
@@ -22,7 +23,8 @@ div {
     left: 0;
     top: 0;
     opacity: 0.3;
-    /*border: 5px solid red;*/
+    backface-visibility:hidden;
+    border: 5px solid red;
 }
 
     div:nth-child(1) {
